2.6
---
* updates requirements
*

2.5
---
* updates AuditResult
* fixes #15714
* fixes #15746


2.4
---
* new endpoint "datamart/audit/results"
* updates ActionPoint std serializer
* bug fixes
* admin improvements
* filtering improvements


2.3
---
* fixes lat/lng informations
* fixes Intervention.reference_number


2.2
---
* fixes InterventionBudgetLoader
* admin improvements
* improves indexing

2.1
---
* Fixes TripLoader
* add lat/lng info to datamart/interventions/
* add centroid/lat/lng info to datamart/locations/
* add extra filter to datamart/t2f/trips/
* add 'vendor_number' to datamart/audit/engagements
* add 'reference_number' to datamart/audit/engagements
* raise default timeout value


2.0
---
* add PRP source endpoints
* new attachments/attachment endpoint
* improves performance
* bug fixes
* server start as unprivileged user
* upgrade to python 3.7
* dependencies upgrade
* fixes Internet Explorer Content-Disposition issue that prevent file downloading


1.26
----
* fixes Intervention  endpoint


1.25
----
* restored `related_module_class` in ActionPoint
* fixes `partner_id` in Intervention


1.24
----
* improves Admin functionalities
* updates FundsReservation endpoints
* fixes FundsReservation ETL
* updates EtlTask management
* add ability to fully reset data



1.23
----
* Compatible with eTools 7.2
* new FundReservation&Header endpoint
* new Grant endpoint
* new InterventionIndicators endpoint
* new HACT History endpoint
* new HACT aggregate endpoint
* new Engagements endpoint
* new Trips endpoint
* new InterventionBudget endpoint
* updated InterventionByLocation endpoint
* updated Intervention endpoint
* updated TPMActivity endpoint
* updated Partner endpoint
* new v2 intervention serializer
* new PartnerContact endpoint
* new PartnerAgreement endpoint
* new ActionPoint endpoint
* new Workspaces endpoint


1.22
----
* Compatible with eTools 6.10
* New endpoint datamart/actionpoints/
* New endpoint datamart/interventions-locations/