@@ -72,6 +72,7 @@ rapidpro-python = "*"
 django-jsoneditor = "*"
 pygments = "*"
 bump2version = "*"
+humanfriendly = "*"
 
 [dev-packages]
 check-manifest= "*"
@@ -82,7 +83,7 @@ factory-boy = "*"
 freezegun = "*"
 isort = "*"
 pre-commit = "*"
-pytest = "*"
+pytest = "<5"
 pytest-coverage = "*"
 pytest-django = "*"
 pytest-echo = "*"
