@@ -1,0 +1,38 @@
+# Generated by Django 2.2.6 on 2019-10-21 08:51
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0105_auto_20191020_1135'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='famindicator',
+            name='spotcheck_comments_received_from_ip',
+            field=models.CharField(blank=True, max_length=40, null=True),
+        ),
+        migrations.AddField(
+            model_name='famindicator',
+            name='spotcheck_comments_received_from_unicef',
+            field=models.TextField(blank=True, null=True),
+        ),
+        migrations.AddField(
+            model_name='famindicator',
+            name='spotcheck_draft_report_issued_to_ip',
+            field=models.CharField(blank=True, max_length=40, null=True),
+        ),
+        migrations.AddField(
+            model_name='famindicator',
+            name='spotcheck_draft_report_issued_to_unicef',
+            field=models.TextField(blank=True, null=True),
+        ),
+        migrations.AddField(
+            model_name='famindicator',
+            name='spotcheck_field_visit',
+            field=models.TextField(blank=True, null=True),
+        ),
+    ]
