@@ -206,18 +206,6 @@ class Engagement(EtoolsDataMartModel):
         (TYPE_SPECIAL_AUDIT, _('Special Audit')),
     )
 
-    PARTNER_CONTACTED = 'partner_contacted'
-    REPORT_SUBMITTED = 'report_submitted'
-    FINAL = 'final'
-    CANCELLED = 'cancelled'
-
-    STATUSES = Choices(
-        (PARTNER_CONTACTED, _('IP Contacted')),
-        (REPORT_SUBMITTED, _('Report Submitted')),
-        (FINAL, _('Final Report')),
-        (CANCELLED, _('Cancelled')),
-    )
-
     # DISPLAY_STATUSES = Choices(
     #     ('partner_contacted', _('IP Contacted')),
     #     ('field_visit', _('Field Visit')),
