@@ -2,15 +2,16 @@
     "record": {
         "master": {
             "model": "data.auditresult",
-            "pk": 183,
+            "pk": 203,
             "fields": {
                 "source_id": null,
-                "last_modify_date": "2019-10-15T16:02:24.974Z",
+                "last_modify_date": "2019-10-21T08:34:48.043Z",
                 "seen": null,
                 "country_name": "bolivia",
                 "schema_name": "bolivia",
                 "area_code": "",
                 "vendor": null,
+                "vendor_number": null,
                 "partner_type": null,
                 "risk_rating": null,
                 "audited_expenditure": "1.00",
@@ -18,7 +19,8 @@
                 "audit_opinion": "--",
                 "count_high_risk_findings": null,
                 "count_financial_findings": null,
-                "count_key_control_weaknesses": null
+                "count_key_control_weaknesses": null,
+                "status": null
             }
         },
         "deps": []
